[package]
name = "solana-fellowship-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3.1.11"
serde = {version = "1.0.219", features = ["derive"]}
solana-client = "1.18"
solana-sdk = "1.18"
tokio = {version = "1.45.1", features = ["full"]}
bs58 = "0.5.0"
spl-token = "4.0"
base64 = "0.21"
